--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - travis_retry conda activate ci
   # install testing dependencies with conda
   - travis_retry conda install --quiet --yes --update-deps --name ci --file requirements.txt
+  - if [ "${PYTHON_VERSION/./}" -lt 30 ]; then travis_retry conda install --quiet --yes --name ci mock; fi
   # install this version
   - python -m pip install --editable .
 
