--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,9 +157,9 @@ aliases:
           mkdir -pv tests;
           pushd tests;
           python${PYTHON_VERSION} -m pytest \
-              --pyargs requests_ecp \
               --cov requests_ecp \
               --junitxml junit.xml \
+              test_requests_ecp.py \
           ;
 
   - &coverage_report
