--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ aliases:
           python${PYTHON_VERSION} -m pytest \
               --cov requests_ecp \
               --junitxml junit.xml \
-              test_requests_ecp.py \
+              ../test_requests_ecp.py \
           ;
 
   - &coverage_report
