ci: fix circle debian issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ aliases:
         name: Configure debian
         command: |
           apt-get -yqq update;
+          apt-get -yqq install ca-certificates;
 
   - &debian_build
       run:
