add minimum version of requests-kerberos

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,12 +272,12 @@ jobs:
     environment:
       PYTHON_VERSION: "3.7"
 
-  centos:7:2.7:
-    <<: *centos
-    docker:
-      - image: centos:7
-    environment:
-      PYTHON_VERSION: "2.7"
+  #centos:7:2.7:
+  #  <<: *centos
+  #  docker:
+  #    - image: centos:7
+  #  environment:
+  #    PYTHON_VERSION: "2.7"
 
   centos:8:3.6:
     <<: *centos
@@ -334,9 +334,9 @@ workflows:
     jobs:
       - sdist
       - flake8
-      - centos:7:2.7:
-          requires:
-            - sdist
+      #- centos:7:2.7:
+      #    requires:
+      #      - sdist
       - centos:8:3.6:
           requires:
             - sdist
