--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Priority: optional
 Maintainer: Duncan Macleod <duncan.macleod@ligo.org>
 Standards-Version: 4.2.1
 X-Python-Version: >= 2.7
-X-Python3-Version: >= 3.4
+X-Python3-Version: >= 3.5
 Homepage: https://github.com/duncanmmacleod/requests-ecp
 Build-Depends:
  debhelper (>= 9),
@@ -25,7 +25,7 @@ Depends:
  ${python:Depends},
  python-lxml,
  python-requests,
- python-requests-kerberos,
+ python-requests-kerberos (>= 0.9.0),
 Description: A SAML/ECP authentication handler for Requests
 
 # -- python3-requests-ecp -----------------------------------------------------
@@ -38,5 +38,5 @@ Depends:
  ${python3:Depends},
  python3-lxml,
  python3-requests,
- python3-requests-kerberos,
+ python3-requests-kerberos (>= 0.9.0),
 Description: A SAML/ECP authentication handler for Requests
