--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,12 +279,12 @@ jobs:
     environment:
       PYTHON_VERSION: "3.7"
 
-  #centos:7:2.7:
-  #  <<: *centos
-  #  docker:
-  #    - image: centos:7
-  #  environment:
-  #    PYTHON_VERSION: "2.7"
+  centos:7:2.7:
+    <<: *centos
+    docker:
+      - image: centos:7
+    environment:
+      PYTHON_VERSION: "2.7"
 
   centos:8:3.6:
     <<: *centos
