--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ aliases:
       run:
         name: Configure debian
         command: |
+          set -x;
           apt-get -yqq update;
           apt-get -yqq install ca-certificates;
 
@@ -38,12 +39,11 @@ aliases:
         name: Build
         command: |
           set -x;
-          if [[ "${PYTHON_VERSION:0:1}" -eq 3 ]]; then PYTHON3="3"; fi
           apt-get -yqq update;
           apt-get -yqq install \
               dpkg-dev \
               devscripts \
-              python${PYTHON3}-pip \
+              python${PYTHON_VERSION:0:1}-pip \
           ;
           pushd $(mktemp -d -p .);
           tar -xf ../requests-ecp-*.tar.* --strip-components=1;
@@ -60,14 +60,11 @@ aliases:
       run:
         name: Install
         command: |
-          PYM="${PYTHON_VERSION:0:1}"
-          if [[ "${PYM}" -eq 2 ]]; then
-              DEB="python-requests-ecp*.deb";
-          else
-              DEB="python${PYM}-requests-ecp*.deb";
-          fi;
+          set -x;
+          DEB="python${PYTHON_VERSION:0:1}-requests-ecp*.deb";
+          grep -q stretch /etc/os-release && BACKPORTS="-t stretch-backports" || true;
           dpkg --install ${DEB} || { \
-              apt-get -y -f install;
+              apt-get -y -f ${BACKPORTS} install;
               dpkg --install ${DEB};
           };
 
@@ -83,9 +80,7 @@ aliases:
               rpm-build \
               yum-utils \
               python-srpm-macros \
-              python2-rpm-macros \
               python3-rpm-macros \
-              python2-pip \
               python3-pip \
           ;
           # build src rpm
@@ -110,6 +105,7 @@ aliases:
       run:
         name: Install
         command: |
+          set -x;
           if [[ "${PYTHON_VERSION:0:1}" -eq 3 ]]; then
               PYXY=$(rpm --eval "%{?python3_pkgversion}");
           else
@@ -121,20 +117,21 @@ aliases:
       run:
         name: Install test dependencies
         command: |
+          set -x;
           PYM="${PYTHON_VERSION:0:1}"
-          if [[ "${PYM}" -eq 2 ]]; then PYM=""; fi;
-          apt-get -yqq install \
+          grep -q stretch /etc/os-release && BACKPORTS="-t stretch-backports" || true;
+          apt-get -yqq ${BACKPORTS} install \
               debianutils \
               python${PYM}-pytest \
               python${PYM}-pytest-cov \
               python${PYM}-requests-mock \
-              $([[ "${PYM}" == "" ]] && echo "python-mock") \
           ;
 
   - &centos_install_test_dependencies
       run:
         name: Install test dependencies
         command: |
+          set -x;
           if [[ "${PYTHON_VERSION:0:1}" -eq 3 ]]; then
               PYXY=$(rpm --eval "%{?python3_pkgversion}");
           else
@@ -145,7 +142,6 @@ aliases:
               python${PYXY}-pytest \
               python${PYXY}-pytest-cov \
               python${PYXY}-requests-mock \
-              $([ "${PYXY}" -eq 2 ] && echo "python2-mock") \
           ;
 
   - &test
@@ -171,6 +167,7 @@ aliases:
       run:
         name: Submit coverage to codecov
         command: |
+          set -x;
           # get OS name from CIRCLE_JOB name (ignore if in a python image)
           export IMAGE=$(python${PYTHON_VERSION} -c "print('${CIRCLE_JOB}'.split(':')[-2])")
           if [[ "${IMAGE}" == "python" ]]; then unset IMAGE; fi
@@ -258,12 +255,12 @@ jobs:
       - *store_test_results
       - *store_test_artifacts
 
-  debian:buster:2.7:
+  debian:stretch:3.5:
     <<: *debian
     docker:
-      - image: debian:buster
+      - image: debian:stretch-backports
     environment:
-      PYTHON_VERSION: "2.7"
+      PYTHON_VERSION: "3.5"
 
   debian:buster:3.7:
     <<: *debian
@@ -279,13 +276,6 @@ jobs:
     environment:
       PYTHON_VERSION: "3.7"
 
-  centos:7:2.7:
-    <<: *centos
-    docker:
-      - image: centos:7
-    environment:
-      PYTHON_VERSION: "2.7"
-
   centos:8:3.6:
     <<: *centos
     docker:
@@ -293,12 +283,12 @@ jobs:
     environment:
       PYTHON_VERSION: "3.6"
 
-  python:2.7:
+  python:3.5:
     <<: *python
     docker:
-      - image: python:2.7-buster
+      - image: python:3.5-buster
     environment:
-      PYTHON_VERSION: "2.7"
+      PYTHON_VERSION: "3.5"
 
   python:3.6:
     <<: *python
@@ -341,13 +331,10 @@ workflows:
     jobs:
       - sdist
       - flake8
-      - centos:7:2.7:
-          requires:
-            - sdist
       - centos:8:3.6:
           requires:
             - sdist
-      - debian:buster:2.7:
+      - debian:stretch:3.5:
           requires:
             - sdist
       - debian:buster:3.7:
@@ -356,7 +343,7 @@ workflows:
       - debian:bullseye:3.7:
           requires:
             - sdist
-      - python:2.7:
+      - python:3.5:
           requires:
             - sdist
       - python:3.6:
