--- a/docs/rtd-environment.yml
+++ b/docs/rtd-environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - python>=3
   - requests
   - requests-kerberos>=0.9.0
-  - requests-mock
+  - requests-mock>=1.5.0
   - setuptools
   - sphinx
   - sphinx-automodapi
