--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
 
 install:
   # create a conda environment including our requirements
-  - travis_retry conda create --quiet --name ci python=${PYTHON_VERSION}
+  - travis_retry conda create --quiet --name ci python=${PYTHON_VERSION} pip
   - travis_retry conda activate ci
   # install testing dependencies with conda
   - travis_retry conda install --quiet --yes --name ci --file requirements.txt
