--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,10 +9,12 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
+conda:
+  environment: docs/rtd-environment.yml
+
 python:
   install:
     - method: pip
       path: .
       extra_requirements:
         - docs
-  system_packages: true
