--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,11 @@ Build-Depends:
  debhelper (>= 9),
  dh-python,
  python3-all,
+ python3-lxml,
+ python3-pytest,
+ python3-requests,
+ python3-requests-kerberos (>= 0.9.0),
+ python3-requests-mock,
  python3-setuptools,
 
 # -- python3-requests-ecp -----------------------------------------------------
