--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,54 @@
 ; -- build
 
 [metadata]
+name = requests-ecp
+author = Duncan Macleod
+author_email = duncan.macleod@ligo.org
+license = GPL-3.0-or-later
 license_files = LICENSE
+description = SAML/ECP authentication handler for python-requests
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://pypi.org/project/requests-ecp/
+classifiers =
+	Development Status :: 4 - Beta
+	Intended Audience :: Science/Research
+	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+	Natural Language :: English
+	Operating System :: OS Independent
+	Programming Language :: Python :: 3
+	Programming Language :: Python :: 3.5
+	Programming Language :: Python :: 3.6
+	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+	Topic :: Scientific/Engineering
+project_urls =
+	Bug Tracker = https://github.com/duncanmmacleod/requests-ecp/issues
+	Documentation = https://requests-ecp.readthedocs.io/
+	Source Code = https://github.com/duncanmmacleod/requests-ecp/
+
+[options]
+packages = find:
+python_requires = >=3.5
+setup_requires =
+	setuptools >= 30.3.0
+install_requires =
+	lxml
+	requests
+	requests-kerberos
+
+[options.extras_require]
+tests =
+	pytest >= 2.9.2
+	pytest-cov
+	requests-mock >= 1.5.0
+docs =
+	sphinx
+	sphinx-argparse
+	sphinx_automodapi
+	sphinx_rtd_theme
+	sphinx_tabs
 
 ; -- tools
 
