--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends:
  python3-requests,
  python3-requests-kerberos (>= 0.9.0),
  python3-requests-mock,
- python3-setuptools,
+ python3-setuptools (>= 30.3.0),
 
 # -- python3-requests-ecp -----------------------------------------------------
 
