--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends:
  python3-lxml,
  python3-pytest,
  python3-requests,
- python3-requests-kerberos (>= 0.9.0),
+ python3-requests-gssapi (>= 1.2.2) | python3-requests-kerberos (>= 0.9.0),
  python3-requests-mock,
  python3-setuptools (>= 30.3.0),
 
@@ -27,7 +27,7 @@ Depends:
  ${python3:Depends},
  python3-lxml,
  python3-requests,
- python3-requests-kerberos (>= 0.9.0),
+ python3-requests-gssapi (>= 1.2.2) | python3-requests-kerberos (>= 0.9.0),
 Description: SAML/ECP authentication handler for Requests
  requests-ecp adds optional SAML/ECP authentication support
  for the python3-requests HTTP library.
