--- a/docs/rtd-environment.yml
+++ b/docs/rtd-environment.yml
@@ -4,7 +4,7 @@ dependencies:
   - pip
   - python>=3
   - requests
-  - requests-kerberos>=0.9.0
+  - requests-gssapi>=1.2.2
   - setuptools
   - sphinx
   - sphinx_rtd_theme
