--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ setup_requires =
 install_requires =
 	lxml
 	requests
-	requests-kerberos
+	requests-gssapi >= 1.2.2
 
 [options.extras_require]
 tests =
