--- a/docs/rtd-environment.yml
+++ b/docs/rtd-environment.yml
@@ -1,14 +1,15 @@
 name: requests-ecp
+channels:
+  - conda-forge
 dependencies:
   - lxml
   - pip
   - python>=3
   - requests
   - requests-gssapi>=1.2.2
+  - requests-mock>=1.5.0
   - setuptools
   - sphinx
   - sphinx_rtd_theme
-  - pip:
-    - requests-mock>=1.5.0
-    - sphinx-automodapi
-    - sphinx_tabs
+  - sphinx-tabs
+  - sphinx-automodapi
