setup.cfg: read version as attr
rather than using custom function in setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 
 [metadata]
 name = requests-ecp
+version = attr: requests_ecp.__version__
 author = Duncan Macleod
 author_email = duncan.macleod@ligo.org
 license = GPL-3.0-or-later
