ci: set the python_version in the cc/bandit config

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,6 +11,8 @@ checks:
 plugins:
   bandit:
     enabled: true
+    config:
+      python_version: 3
   duplication:
     enabled: true
     config:
