auth: make the kerberos requirement optional
for pip installs only

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,10 @@ setup_requires =
 install_requires =
 	lxml
 	requests
-	requests-gssapi >= 1.2.2
 
 [options.extras_require]
+kerberos =
+	requests-gssapi >= 1.2.2
 tests =
 	pytest >= 2.9.2
 	pytest-cov
