ci: update configuration
- separate pip-based and conda-based workflows
- auto cancel all workflows when outdated

--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -11,9 +11,15 @@ on:
   push:
     branches:
       - main
+      - release/**
   pull_request:
     branches:
       - main
+      - release/**
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   tarball:
