--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ setup_requires =
 	setuptools >= 30.3.0
 install_requires =
 	lxml
-	requests
+	requests >= 2.14.0
 
 [options.extras_require]
 kerberos =
