ci: fix RPM package info block
typo

--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -357,9 +357,9 @@ jobs:
           # print contents of packages
           for rpmf in *.rpm; do
               echo "===== ${rpmf}"
-              rpm -qlp "${rpmf}"
+              rpm -qp --info "${rpmf}"
               echo "Files:"
-              rpm -qip "${rpmf}"
+              rpm -qp --list "${rpmf}"
               echo "Provides:"
               rpm -qp --provides "${rpmf}"
               echo "Requires:"
