--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -324,6 +324,12 @@ jobs:
         if: matrix.dist == 'lscsoft'
         run: ln -s /usr/bin/yum /usr/bin/dnf
 
+      - name: Enable CRB (Rocky Linux >=9)
+        if: matrix.dist == 'rockylinux' && matrix.version >= 9
+        run: |
+          dnf -y -q install "dnf-command(config-manager)"
+          dnf config-manager --set-enabled crb
+
       - name: Configure EPEL
         if: matrix.dist != 'fedora'
         run: |
