--- a/docs/rtd-environment.yml
+++ b/docs/rtd-environment.yml
@@ -13,7 +13,7 @@ dependencies:
   # tests
   - requests-mock>=1.5.0
   # docs
+  - furo
   - sphinx
-  - sphinx_rtd_theme
   - sphinx-tabs
   - sphinx-automodapi
