--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Homepage: https://github.com/duncanmmacleod/requests-ecp
 Build-Depends:
  debhelper (>= 9),
  dh-python,
- python3-all,
+ pybuild-plugin-pyproject,
+ python3-all (>= 3.5),
  python3-lxml,
  python3-pytest,
  python3-requests,
