--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -43,6 +43,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+
       - name: Install requests-ecp
         run: python -m pip install .[tests]
 
