--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
+          check-latest: true
           python-version: ${{ matrix.python-version }}
 
       - name: Update pip
