--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Priority: optional
 Maintainer: Duncan Macleod <duncan.macleod@ligo.org>
 Standards-Version: 4.2.1
 X-Python3-Version: >= 3.5
-Homepage: https://github.com/duncanmmacleod/requests-ecp
+Homepage: https://git.ligo.org/computing/software/requests-ecp
 Build-Depends:
  debhelper (>= 9),
  dh-python,
