--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 4.2.1
 X-Python3-Version: >= 3.5
 Homepage: https://git.ligo.org/computing/software/requests-ecp
 Build-Depends:
- debhelper (>= 9),
+ debhelper-compat (= 13),
  dh-python,
  pybuild-plugin-pyproject,
  python3-all (>= 3.5),
