--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include LICENSE README.md MANIFEST.in
+include LICENSE README.md
 include rpm/*.spec
-recursive-include debian *
+include debian/* debian/source/*
